# llm_deep_dive

./: README.md  main.py  pyproject.toml
01_tokens_and_embeddings/: 01_text2numbers.ipynb  02_make_a_tokenizer.ipynb  03_preparing_text_for_tokens.ipynb  05_byte_pair_encoding.ipynb  06_bpe_loop.ipynb  09_strawberry.ipynb  10_BERT.ipynb  11_token_translation.ipynb  12_token_compression.ipynb
