[project]
name = "llm-deep-dive"
version = "0.1.0"
description = "Deep-dive into LLMs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
]
